--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.15",
-    "@types/node": "12.0.8",
-    "@types/react": "16.8.20",
-    "@types/react-dom": "16.8.4",
+    "detect-node": "^2.0.4",
+    "node-sass": "^4.12.0",
+    "ohm-js": "^0.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.2"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +30,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/detect-node": "^2.0.0",
+    "@types/jest": "24.0.15",
+    "@types/node": "12.0.8",
+    "@types/react": "^16.8.20",
+    "@types/react-dom": "16.8.4",
+    "typescript": "3.5.2"
   }
 }
