--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "aeql",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jweissman.github.io/aeql/",
   "dependencies": {
+    "axios": "^0.19.0",
     "detect-node": "^2.0.4",
     "node-sass": "^4.12.0",
     "ohm-js": "^0.14.0",
@@ -37,6 +39,7 @@
     "@types/node": "12.0.8",
     "@types/react": "^16.8.20",
     "@types/react-dom": "16.8.4",
+    "gh-pages": "^2.0.1",
     "typescript": "3.5.2"
   }
 }
