--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ohm-js": "^0.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "trianglify": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +41,7 @@
     "@types/node": "12.0.8",
     "@types/react": "^16.8.20",
     "@types/react-dom": "16.8.4",
+    "@types/trianglify": "^1.2.0",
     "gh-pages": "^2.0.1",
     "typescript": "3.5.2"
   }
