--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "homepage": "https://jweissman.github.io/aeql/",
   "dependencies": {
+    "@types/pluralize": "^0.0.29",
     "axios": "^0.19.0",
     "detect-node": "^2.0.4",
     "node-sass": "^4.12.0",
     "ohm-js": "^0.14.0",
+    "pluralize": "^8.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
